<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1"
        android:layout_margin="10dp">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine|textShortMessage"
            android:ems="10"
            android:id="@+id/discussionTopic"
            android:hint="@string/topic_text"
            android:theme="@style/MyEditText"
            android:layout_marginBottom="10dp"
            android:gravity="top"
            android:scrollbars="vertical"
            android:scrollIndicators="right"
            android:maxHeight="@android:dimen/thumbnail_height"
            style="@style/Widget.AppCompat.EditText" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/discussionDescription"
            android:hint="@string/description_text"
            android:theme="@style/MyEditText"
            android:gravity="top"
            android:scrollIndicators="right"
            android:scrollbars="vertical"
            android:maxHeight="@android:dimen/thumbnail_height"
            style="@style/Widget.AppCompat.EditText" />

        <Button
            android:text="@string/submit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/discussionSubmitButton"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_marginBottom="10dp" />
    </LinearLayout>
</ScrollView>